Fix link alignment

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -72,6 +72,7 @@ a {
 .hero-content {
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 
 .hero-header {
